--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,7 +1,8 @@
-v4.15.20.0 (2020-10-21)
+v4.15.21.0 (2020-10-24)
 - Fix: Crash when UserDevice list updating.
 - Update: Make missing HID Guardian a moderate (optional) issue, which won't prevent UI to load.
 - Update: Redirect HID Guardian [Install] issue button to dedicated install form.
+- Update: Information on [Help] tab updated.
 - New: Add HID Guardian warnings and manual uninstall instructions to [HID Guardian] tab.
 
 v4.15.16.0 (2020-10-19)
