--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,6 +1,7 @@
-v4.15.21.0 (2020-10-24)
+v4.15.22.0 (2020-10-24)
 - Fix: Crash when UserDevice list updating.
 - Fix: Issue detector sometimes do start when app starts.
+- Fix: Interface freezing during error report.
 - Update: Make missing HID Guardian a moderate (optional) issue, which won't prevent UI to load.
 - Update: Redirect HID Guardian [Install] issue button to dedicated install form.
 - Update: Information on [Help] tab updated.
