--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,10 +1,11 @@
-v4.16.07.0 (2020-10-25)
+v4.16.08.0 (2020-10-25)
 - Fix: Controller image scaling issue.
-- Fix: Crash when UserDevice list updating.
+- Fix: Crash when User Device list updating.
 - Fix: Issue detector sometimes do not start after app starts.
 - Fix: Issue detector was reporting missing HID Guardian when not needed.
 - Fix: Interface freezing during error report.
 - Fix: HID Guardian was not always applying settings.
+- Fix: Do not request XInput states when program is minimized to save CPU resources.
 - Update: Configure Hid Guardian Automatically option is set to OFF by default now.
 - Update: Application no longer requires elevated privileges when starting.
 - Update: Make missing HID Guardian a moderate (optional) issue, which won't prevent UI to load.
