--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,4 +1,4 @@
-v4.17.10.0 (2020-10-31)
+v4.17.12.0 (2020-11-15)
 - Fixed: Issue when mappings from other games would merge into currently selected game.
 - Fixed: Sometimes crashing when generating exception info.
 - Fixed: Guide button map.
@@ -6,6 +6,7 @@ v4.17.10.0 (2020-10-31)
 - Fixed: Anti Dead Zone settings reset on application load.
 - Fixed: Crash when scanning large files for XInput support.
 - Update: Scanning files for XInput support is much faster now.
+- New: Clear option in on Trigger and Thumb map page.
 - New: Option to auto switch configuration when game focused.
 
 v4.16.8.0 (2020-10-25)
