--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,3 +1,6 @@
+v4.17.14.0 (2020-11-15)
+- Fixed: Crash when selecting unavailable game.
+
 v4.17.13.0 (2020-11-15)
 - Fixed: Guide button virtual key code fixed.
 
