--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,5 +1,6 @@
-v4.17.14.0 (2020-11-15)
+v4.17.15.0 (2020-11-15)
 - Fixed: Crash when selecting unavailable game.
+- Fixed: Crash when loading user device capabilities.
 
 v4.17.13.0 (2020-11-15)
 - Fixed: Guide button virtual key code fixed.
